[project]
name = "cse5525"
version = "0.1.0"
description = "CSE 5525 NLP Course Final Project."
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "gensim>=4.4.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pip>=25.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.9",
    "stanza>=1.11.0",
    "textblob>=0.19.0",
    "torch>=2.9.1",
    "torchtext>=0.18.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "vadersentiment>=3.3.2",
]
